fixed report panel/control panel overlap

--- a/app/styles/components/c-control_panel.scss
+++ b/app/styles/components/c-control_panel.scss
@@ -2,7 +2,6 @@
 
 .controlpanel {
   background: rgba($color-1, .95);
-  box-shadow: 29px 0 4px 0 rgba($color-12, .5);
   height: $accordion-mobile-height;
   left: 0;
   position: absolute;
@@ -16,27 +15,17 @@
 
   @media #{$mq-tablet} {
     background: transparent;
+    flex: 1 1 auto;
     height: auto;
-    left: auto;
-    max-height: calc(100vh - #{$panel-control-base-height + $offset-panel-control});
-    max-width: 350px;
     overflow-y: auto;
-    padding: 0 0 0 30px;
-    right: 0;
+    position: relative;
     top: 0;
-
-  }
-
-  &.-is-report-visible {
-    @media #{$mq-tablet} {
-      max-height: calc(100vh - #{$panel-control-base-height + $offset-panel-control-with-report});
-    }
+    width: 100%;
   }
 
   > .bg-wrapper {
     background: rgba($color-1, .95);
-    box-shadow: 0 0 4px 0 rgba($color-12, .5);
-    height: 100%;
+    box-shadow: 29px 0 4px 0 rgba($color-12, .5);
   }
 
   .resume-display {
@@ -167,9 +156,9 @@
       }
 
       .content-accordion {
+        -webkit-overflow-scrolling: touch;
         height: calc(100% - 108px);
         overflow-y: auto;
-        -webkit-overflow-scrolling: touch;
         padding: 15px 20px;
 
         @media #{$mq-tablet} {
